feat: Update to LLVM 21.1.2 and add LLVM image

--- a/.github/workflows/deploy_edge.yml
+++ b/.github/workflows/deploy_edge.yml
@@ -31,6 +31,7 @@ jobs:
           - "clang-tidy"
           - "clang-format"
           - "llvm-bolt"
+          - "llvm"
 
     steps:
       - name: Check out the repo
