--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -28,8 +28,34 @@ jobs:
       matrix:
         # clang-format was added with LLVM 4.0.0
         cfg:
+          # LLVM 21.x
+          - { tag: "v21.1.2", version: "llvmorg-21.1.2", latest: true,  latest_major: true,  latest_minor: true  }
+          - { tag: "v21.1.1", version: "llvmorg-21.1.1", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v21.1.0", version: "llvmorg-21.1.0", latest: false, latest_major: false, latest_minor: false }
+
+          # LLVM 20.x
+          - { tag: "v20.1.8", version: "llvmorg-20.1.8", latest: false, latest_major: true,  latest_minor: true  }
+          - { tag: "v20.1.7", version: "llvmorg-20.1.7", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.6", version: "llvmorg-20.1.6", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.5", version: "llvmorg-20.1.5", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.4", version: "llvmorg-20.1.4", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.3", version: "llvmorg-20.1.3", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.2", version: "llvmorg-20.1.2", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.1", version: "llvmorg-20.1.1", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v20.1.0", version: "llvmorg-20.1.0", latest: false, latest_major: false, latest_minor: false }
+
+          # LLVM 19.x
+          - { tag: "v19.1.7", version: "llvmorg-19.1.7", latest: false, latest_major: true,  latest_minor: true  }
+          - { tag: "v19.1.6", version: "llvmorg-19.1.6", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v19.1.5", version: "llvmorg-19.1.5", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v19.1.4", version: "llvmorg-19.1.4", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v19.1.3", version: "llvmorg-19.1.3", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v19.1.2", version: "llvmorg-19.1.2", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v19.1.1", version: "llvmorg-19.1.1", latest: false, latest_major: false, latest_minor: false }
+          - { tag: "v19.1.0", version: "llvmorg-19.1.0", latest: false, latest_major: false, latest_minor: false }
+
           # LLVM 18.x
-          - { tag: "v18.1.8", version: "llvmorg-18.1.8", latest: true,  latest_major: true,  latest_minor: true  }
+          - { tag: "v18.1.8", version: "llvmorg-18.1.8", latest: false, latest_major: true,  latest_minor: true  }
           - { tag: "v18.1.7", version: "llvmorg-18.1.7", latest: false, latest_major: false, latest_minor: false }
           - { tag: "v18.1.6", version: "llvmorg-18.1.6", latest: false, latest_major: false, latest_minor: false }
           - { tag: "v18.1.5", version: "llvmorg-18.1.5", latest: false, latest_major: false, latest_minor: false }
