--- a/.github/workflows/llvm.yml
+++ b/.github/workflows/llvm.yml
@@ -1,4 +1,4 @@
-name: clang
+name: llvm
 
 on:
   push:
@@ -6,9 +6,9 @@ on:
       - main
     paths:
       # Workflow file itself
-      - '.github/workflows/clang.yml'
+      - '.github/workflows/llvm.yml'
       # Dockerfile
-      - 'clang.dockerfile'
+      - 'llvm.dockerfile'
       # Patches
       - 'patches/**'
   workflow_dispatch:
@@ -19,14 +19,13 @@ permissions:
 
 jobs:
   push_to_registry:
-    name: Push Docker image (clang-${{ matrix.cfg.tag }})
+    name: Push Docker image (llvm-${{ matrix.cfg.tag }})
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
 
       matrix:
-        # clang was added with LLVM 2.6.0
         cfg:
           # LLVM 21.x
           - { tag: "v21.1.2", version: "llvmorg-21.1.2", latest: true,  latest_major: true,  latest_minor: true  }
@@ -102,77 +101,6 @@ jobs:
           - { tag: "v14.0.1", version: "llvmorg-14.0.1", latest: false, latest_major: false, latest_minor: false }
           - { tag: "v14.0.0", version: "llvmorg-14.0.0", latest: false, latest_major: false, latest_minor: false }
 
-          # LLVM 13.x
-          - { tag: "v13.0.1", version: "llvmorg-13.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v13.0.0", version: "llvmorg-13.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 12.x
-          - { tag: "v12.0.1", version: "llvmorg-12.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v12.0.0", version: "llvmorg-12.0.0", latest: false, latest_major: false, latest_minor: false }
-          
-          # LLVM 11.x
-          - { tag: "v11.1.0", version: "llvmorg-11.1.0", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v11.0.1", version: "llvmorg-11.0.1", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v11.0.0", version: "llvmorg-11.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 10.x
-          - { tag: "v10.0.1", version: "llvmorg-10.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v10.0.0", version: "llvmorg-10.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 9.x
-          - { tag: "v9.0.1", version: "llvmorg-9.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v9.0.0", version: "llvmorg-9.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 8.x
-          - { tag: "v8.0.1", version: "llvmorg-8.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v8.0.0", version: "llvmorg-8.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 7.x
-          - { tag: "v7.1.0", version: "llvmorg-7.1.0", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v7.0.1", version: "llvmorg-7.0.1", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v7.0.0", version: "llvmorg-7.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 6.x
-          - { tag: "v6.0.1", version: "llvmorg-6.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v6.0.0", version: "llvmorg-6.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 5.x
-          - { tag: "v5.0.2", version: "llvmorg-5.0.2", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v5.0.1", version: "llvmorg-5.0.1", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v5.0.0", version: "llvmorg-5.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 4.x
-          - { tag: "v4.0.1", version: "llvmorg-4.0.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v4.0.0", version: "llvmorg-4.0.0", latest: false, latest_major: false, latest_minor: false }
-
-          # LLVM 3.x
-          - { tag: "v3.9.1", version: "llvmorg-3.9.1", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v3.9.0", version: "llvmorg-3.9.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.8.1", version: "llvmorg-3.8.1", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.8.0", version: "llvmorg-3.8.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.7.1", version: "llvmorg-3.7.1", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.7.0", version: "llvmorg-3.7.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.6.2", version: "llvmorg-3.6.2", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.6.1", version: "llvmorg-3.6.1", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.6.0", version: "llvmorg-3.6.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.5.2", version: "llvmorg-3.5.2", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.5.1", version: "llvmorg-3.5.1", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.5.0", version: "llvmorg-3.5.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.4.2", version: "llvmorg-3.4.2", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.4.1", version: "llvmorg-3.4.1", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.4.0", version: "llvmorg-3.4.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.3.1", version: "llvmorg-3.3.1", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.3.0", version: "llvmorg-3.3.0", latest: false, latest_major: false, latest_minor: false }
-          - { tag: "v3.2.0", version: "llvmorg-3.2.0", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.1.0", version: "llvmorg-3.1.0", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v3.0.0", version: "llvmorg-3.0.0", latest: false, latest_major: false, latest_minor: true  }
-
-          # LLVM 2.x
-          - { tag: "v2.9.0", version: "llvmorg-2.9.0", latest: false, latest_major: true,  latest_minor: true  }
-          - { tag: "v2.8.0", version: "llvmorg-2.8.0", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v2.7.0", version: "llvmorg-2.7.0", latest: false, latest_major: false, latest_minor: true  }
-          - { tag: "v2.6.0", version: "llvmorg-2.6.0", latest: false, latest_major: false, latest_minor: true  }
-
     steps:
       - name: Check out the repo
         uses: actions/checkout@v5
@@ -183,8 +111,8 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ams21/clang
-            ghcr.io/ams21/clang
+            ams21/llvm
+            ghcr.io/ams21/llvm
           flavor: |
             latest=${{ matrix.cfg.latest }}
             prefix=
@@ -218,7 +146,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: ./
-          file: clang.dockerfile
+          file: llvm-bolt.dockerfile
           build-args: "VERSION=${{ matrix.cfg.version }}"
           push: true
           platforms: "linux/amd64"
